--- a/shipping/Pipfile
+++ b/shipping/Pipfile
@@ -7,6 +7,11 @@ name = "pypi"
 
 [packages]
 django = "*"
+django-phonenumber-field = "*"
+phonenumbers = "*"
+django-language-field = "*"
+django-money = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.6"
