change folder structure

--- a/shipping/Pipfile
+++ b/shipping/Pipfile
@@ -12,6 +12,7 @@ phonenumbers = "*"
 django-language-field = "*"
 django-money = "*"
 psycopg2 = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.6"
