--- a/shipping/Pipfile
+++ b/shipping/Pipfile
@@ -14,6 +14,8 @@ django-money = "*"
 psycopg2 = "*"
 psycopg2-binary = "*"
 djangorestframework = "*"
+djangorestframework-gis = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.6"
